# MIRA

./: .bandit.yml  .diffray.yml  .dockerignore  .enum-drift-allowlist.txt  .env.template  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pr-body-qr.md  .pre-commit-config.yaml  .smoke-jwt.ts  .smoke-qr-png.ts  .smoke-qr.ts  .trivyignore  AGENTS.md  ANTIGRAVITY_INSTALL_RECOMMENDATION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE-INSTRUCTIONS.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  DEVLOG.md  FactoryLM_Lead_Pipeline_2026.xlsx  HANDOFF-linear-triage.md  HANDOFF.md  HANDOFF_2026-05-12.md  HANDOFF_2026-05-18.md  HANDOFF_2026-05-20.md  HANDOFF_2026-06-02_P5-9.md  KNOWLEDGE.md  LICENSE  MIRA Spec..md  MIRA-Build-Plan.md  MIRA_Integration_Plan.md  MIRA_LlamaIndex_RAG_PRD.docx.md  MODULES.md  Makefile  (+51 more)
mira-connect/: pyproject.toml
mira-connect/mira_connect/drivers/: base.py  modbus_driver.py
mira-connect/tests/: test_modbus_driver.py
mira-connectors/: README.md  base.py  canonical.py  conftest.py  demo.py  pyproject.toml  uns_bridge.py
mira-connectors/cmms/: __init__.py  maintainx_mock.py  maximo_mock.py  sap_mock.py
mira-connectors/cmms/fixtures/: maintainx_demo.json  maximo_demo_plant.json  sap_demo_plant.json
mira-connectors/historian/: __init__.py  pi_mock.py
mira-connectors/historian/fixtures/: pi_demo_points.json
mira-connectors/mira_connectors/: __init__.py  _uns.py  base.py  canonical.py  confirmation_gate.py  factory.py  service.py  store.py
mira-connectors/mira_connectors/mocks/: __init__.py  ignition_mock.py  maintainx_mock.py  maximo_mock.py  pi_mock.py  sap_mock.py
mira-connectors/mira_connectors/types/: __init__.py  (+5 more)
mira-connectors/scada/: __init__.py  ignition_mock.py
mira-connectors/tests/: conftest.py  test_base.py  test_base_connector.py  test_canonical.py  test_confirmation_gate.py  test_demo.py  test_factory.py  test_ignition_mock.py  test_maintainx_mock.py  test_maximo_mock.py  test_pi_mock.py  test_sap_mock.py  test_service.py
mira-contextualizer/: .gitignore  ARCHITECTURE.md  MIRA-Contextualizer.spec  PACKAGING.md  README.md  installer.iss  pyproject.toml
mira-contextualizer/mira_contextualizer/: __init__.py  __main__.py  app.py  bundle.py  ccw.py  contextualize.py  engine.py  extract.py  manuals.py  placement.py  profile.py  scorecard.py  server.py  standards.py  store.py
mira-contextualizer/tests/: conftest.py  test_bundle.py  test_ccw.py  test_contextualize.py  test_demo_garage_conveyor.py  test_engine.py  test_extract.py  test_manuals.py  test_packaging.py  test_placement.py  test_profile.py  test_scorecard.py  test_server.py  test_standards.py  test_store.py
mira-fault-detective/: Dockerfile  engine.py  pyproject.toml  rules.py
mira-fault-detective/tests/: test_http_api.py  test_rules.py
mira-fault-sim/: Dockerfile  pyproject.toml  sim.py
mira-fault-sim/tests/: test_inject_modes.py
mira-plc-parser/: .gitignore  COMPILER.md  EVAL_RUBRICS.md  MIRA-Tag-Mapper.spec  PACKAGING.md  PHASE2_PROOF.md  README.md  VQT_ATTACH_SPEC.md  mira-plc-parser.spec  pyproject.toml
mira-plc-parser/evals/: EVAL_SCORECARD.md  REAL_SAMPLES.md  score_phases.py  validate_real_exports.py
mira-plc-parser/gui/: PACKAGING.md  README.md  desktop.py  index.html
mira-plc-parser/mira_plc_parser/: __init__.py  __main__.py  analyze.py  cli.py  compiler.py  correlate.py  coverage.py  detect.py  discovery.py  i3x.py  i3x_client.py  ir.py  pipeline.py  roles.py  uns.py  vqt_attach.py
mira-plc-parser/tests/: conftest.py  test_analysis_depth.py  test_analyze_pipeline.py  test_aoi_parsing.py  test_cli.py  test_compiler.py  test_correlate.py  test_csv_tags_path.py  test_detect.py  test_fbd_parsing.py  test_golden.py  test_gui_contract.py  test_i3x.py  test_i3x_client.py  test_ignition_json.py  test_l5x.py  test_plcopen_xml.py  test_produced_consumed.py  test_rockwell_aoi.py  test_rockwell_fbd.py  test_rockwell_modules.py  test_roles.py  test_siemens.py  test_siemens_awl.py  test_structured_text.py  test_tokenizer.py  test_uns.py  test_vqt_attach.py
mira-relay/: Dockerfile  Dockerfile.sparkplug  auth.py  clock_resolver.py  diff_logger.py  flaky_detector.py  historian.py  historian_postgres.py  ingest_contract.py  neon.py  pyproject.toml  relay_server.py  rollup_worker.py  tag_diff_logger.py  tag_ingest.py
mira-relay/config/: flaky_rules.json
mira-relay/mqtt_ingest/: __init__.py  __main__.py  config.py  decode.py  run.py  subscriber.py
mira-relay/tests/: conftest.py  test_auth.py  test_clock_resolver.py  test_diff_logger.py  test_flaky_detector.py  test_historian_adapter.py  test_historian_api.py  test_hmac_auth.py  test_neon_sql.py  test_relay.py  test_sign_and_post.py  test_sparkplug_codec.py  test_sparkplug_consumer.py  test_sparkplug_decoder.py  test_sparkplug_loop.py  test_sparkplug_seed.py  test_tag_diff_logger.py  test_tag_ingest.py
mira-relay/tools/: sign_and_post.py
mira-seo/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
mira-seo/config/: feeds.yml
mira-seo/migrations/: 001_blog_drafts.sql
mira-seo/mira_seo/: __init__.py
mira-seo/tests/: __init__.py  test_gsc_client.py  test_linkedin_publisher.py  test_medium_publisher.py  test_openpagerank.py  test_serpapi_client.py  test_site_crawler.py  test_telegram_notifier.py  test_youtube_analyzer.py
mira-seo/tools/: analyze_reference_video.py
mira-sidecar/: .env.example  ARCHIVED.md  CLAUDE.md  Dockerfile  app.py  config.py  pyproject.toml  safety.py
mira-sidecar/fsm/: builder.py  models.py
mira-sidecar/llm/: anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py  sanitize.py
mira-sidecar/openwebui/: mira_diagnostic_pipe.py
mira-sidecar/rag/: chunker.py  embedder.py  neon_store.py  query.py  store.py
mira-sidecar/routing/: __init__.py  health_probe.py  tier_router.py
mira-sidecar/service/: install_service_linux.sh  install_service_windows.bat  mira-rag.service.template  uninstall_service_windows.bat
plc/live-plc-bridge/: Dockerfile  MIRA-LivePLCBridge-Boot.xml  bridge.py  pyproject.toml  run_bridge_laptop.bat
(+7241 files in other folders)
