[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "mira-bots-phase1",
    "mira-bots-phase2",
    "mira-bots-phase3",
    "archives",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter

# mira-copy CLI: run with `python -m mira_copy` (no [project] table needed)

[tool.pytest.ini_options]
asyncio_mode = "auto"
