[project]
name = "mira-connect"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymodbus>=3.7,<4",
    "websockets>=13,<14",
    "httpx>=0.28,<1",
    "pyyaml>=6,<7",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
