[project]
name = "mira-connectors"
version = "0.1.0"
description = "Generic connector framework for MIRA — CMMS/SCADA/Historian/Document/MQTT → canonical model → confirmation gate"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# Postgres store (PostgresProposalStore). Tests use the in-memory store and need none of this.
postgres = ["SQLAlchemy>=2.0"]

[tool.setuptools.packages.find]
include = ["mira_connectors*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
