[project]
name = "mira-fault-detective"
version = "0.1.0"
description = "MIRA Conveyor Fault Detective — 7-rule diagnostic engine"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt==2.3.0",
    "pydantic==2.9.2",
]

[project.optional-dependencies]
test = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.setuptools]
py-modules = ["engine", "rules"]
