[project]
name = "mira-fault-sim"
version = "0.1.0"
description = "MIRA Conveyor Fault Detective — sensor + vision + fuse simulator"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "aiomqtt==2.3.0",
    "pydantic==2.9.2",
]

[project.optional-dependencies]
test = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.setuptools]
py-modules = ["sim"]
