[project]
name = "mira-seo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "celery>=5.4",
    "redis>=5.0",
    "youtube-transcript-api>=0.6",
    "google-api-python-client>=2.130",
    "google-auth-httplib2>=0.2",
    "google-auth>=2.29",
    "weasyprint>=62",
    "python-multipart>=0.0.9",
    "feedparser>=6.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "respx", "aioresponses"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
