[project]
name = "live-plc-bridge"
version = "0.1.0"
description = "MIRA Fault-Detective — live Micro 820 Modbus TCP -> MQTT ingest (Stream A)"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt==2.3.0",
    "pymodbus==3.8.6",
]

[project.optional-dependencies]
test = ["pytest==8.3.3"]

[tool.setuptools]
py-modules = ["bridge"]
